[package]
name = "robco"
version = "0.1.0"
authors = ["hypen-emdash <joffe.daniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
thiserror = "1.0.23"
anyhow = "1.0.38"

[[bin]]
name = "robco"
path = "src/main.rs"    
